# bookingapp

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml  requests.http
src/: lib.rs  main.rs
src/application/usecases/: events.rs  events_port.rs  events_test.rs  mod.rs  users.rs  users_test.rs  zones.rs  zones_port.rs  zones_test.rs
src/config/: config_loader.rs  stage.rs
src/domain/entities/: events.rs  mod.rs  users.rs  zones.rs
src/domain/repositories/: events.rs  users.rs  zones.rs
src/domain/value_objects/: event_model.rs  event_statuses.rs  mod.rs  zone_model.rs
src/infrastructure/axum_http/: http_serve.rs  mod.rs
src/infrastructure/axum_http/routers/: events.rs  users.rs
src/infrastructure/postgres/: mod.rs  postgres_connection.rs  schema.rs
src/infrastructure/postgres/migrations/2026-01-12-090252_create_user_table/: up.sql
src/infrastructure/postgres/migrations/2026-01-12-100106_create_event_table/: up.sql
src/infrastructure/postgres/migrations/2026-01-12-100500_create_zone_table/: down.sql  up.sql
src/infrastructure/postgres/migrations/2026-01-12-101953_create_seats_table/: down.sql  up.sql
src/infrastructure/postgres/migrations/2026-01-12-102320_create_booking_table/: down.sql  up.sql
src/infrastructure/postgres/migrations/2026-01-26-034614_change_numeric_type_to_decimal/: down.sql  up.sql
src/infrastructure/postgres/repositories/: events.rs  mod.rs  users.rs  zones.rs
src/utils/: converter.rs  converter_test.rs  mod.rs
