[package]
name = "bookingapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] } 
diesel = { version = "2.3.5", features = [
  "numeric",
  "postgres",
  "serde_json",
  "chrono",
  "r2d2",
  "uuid",
] }
dotenvy = "0.15.7"
mockall = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
